# enterprise-rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  bm25_corpus.json  pyproject.toml  requirements.txt  start.sh  test_llm.py  test_qdrant.py  test_search.py
backend/alembic/: env.py
backend/alembic/versions/: 9cbf7f885e05_add_conversations_and_messages.py  a3f1e2d4c5b6_add_documents_table.py  e1b5c4bcd88f_create_users_table.py
backend/src/app/: __init__.py  main.py
backend/src/app/application/: exceptions.py
backend/src/app/application/auth/: service.py
backend/src/app/application/chat/: conversation_service.py
backend/src/app/application/rag/: embedding_service.py  llm_service.py  model_registry.py  rag_service.py  retrieval_service.py
backend/src/app/domain/: __init__.py
backend/src/app/domain/auth/: roles.py  user.py
backend/src/app/domain/chat/: conversation.py
backend/src/app/infrastructure/: __init__.py
backend/src/app/infrastructure/bm25/: bm25_service.py
backend/src/app/infrastructure/config/: settings.py
backend/src/app/infrastructure/database/: database.py  models.py  seed.py  session.py
backend/src/app/infrastructure/logging/: __init__.py  config.py
backend/src/app/infrastructure/models/: __init__.py  conversation.py  document.py  user.py
backend/src/app/infrastructure/repositories/: conversation_repository.py  demo_user_repository.py  user_repository.py
backend/src/app/presentation/: __init__.py
backend/src/app/presentation/api/: auth.py  (+9 more)
(+60 files in other folders)
