[project]
name = "enterprise-ai-knowledge-assistant-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for the Enterprise AI Knowledge Assistant."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "loguru",
    "bcrypt",
    "python-jose[cryptography]",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
